--- a/web/css/proj1/css/style.css
+++ b/web/css/proj1/css/style.css
@@ -45,6 +45,13 @@ body {
     height: 36px;
 }
 
+.text-box {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+}
+
 .heading-primary{
     color: white;
     text-transform: uppercase
