--- a/web/css/proj1/css/style.css
+++ b/web/css/proj1/css/style.css
@@ -25,14 +25,10 @@ body {
 .header {
     position: relative;
     height: 95vh;
-    background-image: linear-gradient(
-        to right bottom,
-        rgba(126,213,111,0.8), 
-        rgba(40,180,131,0.8)), 
-    url(../img/hero.jpg);
+    background-image: linear-gradient( to right bottom, rgba(126, 213, 111, 0.8), rgba(40, 180, 131, 0.8)), url(../img/hero.jpg);
     background-size: cover;
     background-position: top;
-    clip-path: polygon(0 0, 100% 0, 100% 75vh, 0 100%); 
+    clip-path: polygon(0 0, 100% 0, 100% 75vh, 0 100%);
 }
 
 .logo-box {
@@ -49,24 +45,130 @@ body {
     position: absolute;
     top: 50%;
     left: 50%;
-    transform: translate(-50%,-50%);
+    transform: translate(-50%, -50%);
+    text-align: center;
 }
 
-.heading-primary{
+.heading-primary {
     color: white;
-    text-transform: uppercase
+    text-transform: uppercase;
+    backface-visibility: hidden;
 }
 
-.heading-primary-main{
+.heading-primary-main {
     display: block;
     font-size: 60px;
     font-weight: 400;
     letter-spacing: 35px;
+    animation-name: moveInLeft;
+    animation-duration: 1s;
+    animation-timing-function: ease-in-out;
+    /* animation-iteration-count: 2; */
+    /* animation-delay: 3s */
 }
 
-.heading-primary-sub{
+.heading-primary-sub {
     display: block;
     font-size: 20px;
     font-weight: 400;
     letter-spacing: 20px;
+    margin-bottom: 60px;
+    animation: moveInRight 1s ease-in-out;
+}
+
+@keyframes moveInLeft {
+    0% {
+        opacity: 0;
+        transform: translateX(-100px);
+    }
+    80% {
+        opacity: 1;
+        transform: translateX(20px);
+    }
+    100% {
+        opacity: 1;
+        transform: translateX(0);
+    }
+}
+
+@keyframes moveInRight {
+    0% {
+        opacity: 0;
+        transform: translateX(100px);
+    }
+    80% {
+        opacity: 1;
+        transform: translateX(-20px);
+    }
+    100% {
+        opacity: 1;
+        transform: translateX(0);
+    }
+}
+
+.btn {
+    padding: 15px 40px;
+    text-transform: uppercase;
+    text-decoration: none;
+    border-radius: 100px;
+    /* for the shadow button */
+    position: relative;
+    animation: moveFromBottom .5s ease-in-out;
+}
+
+.btn:focus{
+    outline: none;
+}
+
+.btn:hover {
+    transform: translateY(-3px);
+    box-shadow: 0 10px 20px rgba(0, 0, 0, .2);
+    transition-duration: .2s;
+}
+
+.btn:active {
+    transform: translateY(-1px);
+    box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
+    transition-duration: .2s;
+}
+
+.btn-white {
+    background-color: white;
+    color: #777;
+}
+
+
+/* after  */
+.btn::after{
+    content: "";
+    display: inline-block;
+    height: 100%;
+    width: 100%;
+    border-radius: 100px;
+    position: absolute;
+    top: 0px;
+    left: 0px;
+    z-index: -1;
+}
+
+.btn-white::after{
+    background-color: white;
+}
+
+.btn:hover::after{
+    transform: scaleX(1.4) scaleY(1.6);   
+    opacity: 0;
+    transition: .4s;
+}
+
+@keyframes moveFromBottom {
+    0% {
+        opacity: 0;
+        transform: translateY(30px);
+    }
+    
+    100% {
+        opacity: 1;
+        transform: translateY(0);
+    }
 }
