--- a/web/css/proj1/sass/abstracts/_variables.scss
+++ b/web/css/proj1/sass/abstracts/_variables.scss
@@ -8,6 +8,9 @@ $color-white: #fff;
 $color-black: #000;
 
 
+//FONT
+$default-font-size: 1.6rem;
+
 //GRID
 $grid-width: 114rem;
 $gutter-vertical: 8rem;
