--- a/web/css/proj1/sass/pages/_home.scss
+++ b/web/css/proj1/sass/pages/_home.scss
@@ -4,24 +4,24 @@
     margin-top: -20vh;
 
 
-    &__row {
-        max-width: $grid-width;
-        margin: 0 auto;
-        // text-align: center;
+    // &__row {
+    //     max-width: $grid-width;
+    //     margin: 0 auto;
+    //     // text-align: center;
     
-        &:not(:last-child) {
-            margin-bottom: $gutter-vertical;
-        }
+    //     &:not(:last-child) {
+    //         margin-bottom: $gutter-vertical;
+    //     }
     
-        @include clearfix;
-    }
+    //     @include clearfix;
+    // }
 
-    &__col{
-        float: left;
-        &:not(:last-child) {
-            margin-right: $gutter-horizontal;
-        }
-        width: calc((100% - #{$gutter-horizontal})/2 );
-    }
+    // &__col{
+    //     float: left;
+    //     &:not(:last-child) {
+    //         margin-right: $gutter-horizontal;
+    //     }
+    //     width: calc((100% - #{$gutter-horizontal})/2 );
+    // }
 
 }
