--- a/web/css/proj1/sass/main.scss
+++ b/web/css/proj1/sass/main.scss
@@ -10,6 +10,7 @@
 
 @import "components/button";
 @import "components/composition";
+@import "Components/feature-box";
 
 @import "layout/header";
 @import "layout/grid";
