--- a/web/css/proj1/sass/main.scss
+++ b/web/css/proj1/sass/main.scss
@@ -9,6 +9,7 @@
 @import "base/utils";
 
 @import "components/button";
+@import "components/card";
 @import "components/composition";
 @import "Components/feature-box";
 
