--- a/web/css/proj1/sass/layout/_header.scss
+++ b/web/css/proj1/sass/layout/_header.scss
@@ -15,7 +15,7 @@
     &__logo {
         height: 3.6rem;
     }
-
+    // 垂直，水平居中
     &__text-box {
         position: absolute;
         top: 50%;
