--- a/web/tools/app/assets/styles/base/_global.css
+++ b/web/tools/app/assets/styles/base/_global.css
@@ -1,9 +1,9 @@
-body{
-    font-family: 'Roboto','sans-serif';
-    color: #333;
+body {
+  font-family: 'Roboto', sans-serif;
+  color: #333;
 }
+
 img {
-    /* 图片最大宽度屏幕宽，无滚动条 */
-    max-width: 100%;
-    height: auto;
+  max-width: 100%;
+  height: auto;
 }
