--- a/css-proj-2-postcss/app/assets/styles/styles.css
+++ b/css-proj-2-postcss/app/assets/styles/styles.css
@@ -8,8 +8,11 @@
 @import "modules/_page-section";
 @import "modules/_headline";
 @import "modules/_row.css";
-@import "modules/generic-content-container.css";
+@import "modules/_generic-content-container.css";
 @import "modules/_section-title.css";
-@import "modules/feature-item.css";
+@import "modules/_feature-item.css";
 @import "modules/_testimonial.css";
+@import "modules/_site-footer.css";
+@import "modules/_site-header.css";
+@import "modules/_primary-nav.css";
 
