Update(auto commit)

--- a/web/CORS/server/views/welcome.ejs
+++ b/web/CORS/server/views/welcome.ejs
@@ -1,9 +1,18 @@
-
-<link rel="stylesheet" type="text/css" href="/styles.css">
-<div class="login-page">
-  <div class="form">
-    <h1>Welcome,<%= username %> </h1>
-    <p><a href="/logout">Log out</a></p>
-    <a href="/statement">Download</a>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>Document</title>
+  <% include head.ejs %>
+</head>
+<body>
+  <div class="container">
+    <form action="/transaction" method="POST">
+      
+    </form>
   </div>
-</div>
+  
+</body>
+</html>
