Update(auto commit)

--- a/web/CORS/server/views/welcome.ejs
+++ b/web/CORS/server/views/welcome.ejs
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,12 +8,44 @@
   <title>Document</title>
   <% include head.ejs %>
 </head>
+
 <body>
-  <div class="container">
+
+  <nav class="navbar navbar-ligth bg-light">
+    <div class="container">
+      <a class="navbar-brand" href="#">Bank Dashboard</a>
+      <ul class="navbar-nav">
+        <li class="nav-item"><a href="/logout"class=nav-link>logout</a></li>
+      </ul>
+    </div>
+  </nav>
+
+  <div class="container mt-4">
+    <h2>History</h2>
+    <ul class="list-group">
+      <% for(let tran of trans ) {%>
+      <li class="list-group-item">
+        <%= tran.name %> |
+        <%= tran.amount %>
+      </li>
+      <% }%>
+    </ul>
+  </div>
+  <div class="container mt-4">  
+    <h2>Transfer Some Money</h2>    
     <form action="/transaction" method="POST">
-      
+      <div class="form-group">
+        <label for="name">Name</label>
+        <input type="text" class="form-control" name="name">
+      </div>
+      <div class="form-group">
+        <label for="name">Money</label>
+        <input type="text" class="form-control" name="amount">
+      </div>
+      <button type="submit" class="btn btn-primary">Submit</button>
     </form>
   </div>
-  
+
 </body>
+
 </html>
